# lekiwi-ros2

./: .gitignore  AGENT_ARCHITECTURE.md  LeKiwiarm_Base_08q-v1Fixed_Gripper_5000_1.000000_1.000000.ikcache  README.md  interactive_demo.py  langgraph.json  launch_moondream.py  lekiwiarm_BaseFixed_Gripper_5000_1.000000_1.000000.ikcache  lekiwiarm_BaseGripper_5000_1.000000_1.000000.ikcache  lekiwiarm_Base_08q-v1Fixed_Gripper_5000_1.000000_1.000000.ikcache  test_dino_standalone.py
config/: mcp_config.json
dino_ai/: README.md  __init__.py  main.py  pyproject.toml
dino_ai/adapters/: __init__.py  mcp_adapter.py  ros_adapter.py  simulation_adapter.py
dino_ai/core/: __init__.py  dino_brain.py  interfaces.py  mcp_client.py  react_brain.py  speech_engine.py
servers/: math_server.py  moondream_server.py  piper_server.py
src/lekiwi/: .setup_assistant  CMakeLists.txt  README.md  package.xml
src/lekiwi/config/: controllers.yaml  initial_positions.yaml  lekiwi.ros2_control.xacro  lekiwi.srdf  lekiwi.urdf.xacro  moveit.rviz  moveit_controllers.yaml  urdf.rviz
src/lekiwi/launch/: README.md  cameras.launch.py  complete_navigation.launch.py  demo.launch.py  gz.launch.py  hardware.launch.py  joint_state_pub_guilaunch.py  lekiwi_full.launch.py  motion_planning.launch.py  move_group.launch.py  moveit.launch.py  moveit_hardware.launch.py  moveit_rviz.launch.py  nav2_bringup.launch.py  navigation.launch.py  robot_hardware.launch.py  rsp.launch.py  rviz.launch.py  setup_assistant.launch.py  simple_nav2.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  view_mobile_base.launch.py  visualization.launch.py
src/lekiwi/urdf/: lekiwi_5dof.urdf  lekiwi_complete.urdf  lekiwi_mobile_base.urdf
src/lekiwi_hardware/: CMakeLists.txt  README.md  lekiwi_hardware.xml
src/lekiwi_hardware/config/: joint_offsets.yaml
src/lekiwi_hardware/include/lekiwi_hardware/: lekiwi_interface.hpp
src/lekiwi_hardware/scripts/: calibrate_arm.py  control_wheels.py  demo_wheels.py  emergency_stop.py  holonomic_controller.py  jog_joints.py  joint_direction_diagnostic.py  manual_holonomic.py  odometry_publisher.py  test_holonomic.py  test_joint_directions.py  test_odometry.py  test_safety_timeout.py  test_wheel_velocity.py  validate_calibration.py  verify_positions.py  zero_pose.py
src/lekiwi_hardware/src/: lekiwi_interface.cpp
